<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exp_1"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_1" />
        <item
            android:id="@+id/nav_exp_2"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_2" />
        <item
            android:id="@+id/nav_exp_3"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_3" />
        <item
            android:id="@+id/nav_exp_4"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_4" />
        <item
            android:id="@+id/nav_exp_5"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_5" />
        <item
            android:id="@+id/nav_exp_6"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_6" />
        <item
            android:id="@+id/nav_exp_7"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_7" />
        <item
            android:id="@+id/nav_exp_8"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_8" />
        <item
            android:id="@+id/nav_exp_9"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_9" />
        <item
            android:id="@+id/nav_exp_10"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_10" />
        <item
            android:id="@+id/nav_exp_11"
            android:icon="@drawable/ic_menu_assignment"
            android:title="@string/nav_item_11" />
    </group>

</menu>
