<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.srimadhan11.madlabexp.Exp8Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/fine_or_coarse" />

    <TextView
        android:id="@+id/choice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/coarse_accuracy_selected" />

    <CheckBox
        android:id="@+id/fineAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fine_accuracy_selected" />

    <Button
        android:id="@+id/chooseRadio"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/prov"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_provider"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

</LinearLayout>
