<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.srimadhan11.madlabexp.Exp5Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/student_details"
            android:textSize="24sp"
            android:gravity="center"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:rowCount="3"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/enter_rollno"
            android:labelFor="@id/rollno"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/rollno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textSize="20sp"
            android:labelFor="@id/name"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/enter_marks"
            android:textSize="20sp"
            android:labelFor="@id/marks"/>

        <EditText
            android:id="@+id/marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="number" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="2">

        <Button
            android:id="@+id/insert"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/insert"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/delete"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/update"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/view"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/view_all"
            android:layout_margin="10dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:text="@string/view_all"
            tools:ignore="RtlHardcoded" />


    </GridLayout>
</LinearLayout>
